--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "ts-jest": "^26.5.5",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
