wrap up test and deploy to Netlify

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,12 +18,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "noImplicitAny": false
   },
   "include": [
     "src"
-  ],
-  "rules": {
-    "no-unused-vars": "off"
-  }
+  ]
 }
