--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "ts-jest": "^26.5.5",
-    "typescript": "^4.1.2",
+    "typescript": "^4.2.4",
+    "@types/lodash.debounce": "^4.0.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test:coverage": "react-scripts test a --coverage",
+    "eject": "react-scripts eject",
+    "lint:fix": "eslint --fix src"
   },
   "eslintConfig": {
     "extends": [
@@ -46,6 +49,17 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash.debounce": "^4.0.6"
+    "msw": "^0.25.0"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!src/index.tsx",
+      "!src/reportWebVitals.ts",
+      "!src/setupProxy.js",
+      "!src/**/*.d.ts",
+      "!src/hooks/*",
+      "!<rootDir>/node_modules/"
+    ]
   }
 }
